[package]
name = "advent_of_rust_code"
version = "0.1.0"
authors = ["David Brockman"]
edition = "2021"
repository = "https://github.com/dbrockman/advent_of_rust_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
itertools = "0.10.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_scan = "0.4.1"
